# mvshader

./: README.md  ubuntu-install-devlibs.sh
project/: CMakeLists.txt  compileshaders.sh  cppfiles.mk  makefile  run-all-here.sh  run-all.sh  run-example.sh  run-fb-256.sh
project/GLline/: CLineData.cpp  CLineStrip.cpp  CLineStrip2.cpp  CPointData.cpp  CPointObject.cpp  CRingData.cpp
project/fragshaders/: 01.glsl  02.glsl  03.glsl  04.glsl
project/include/: CBlockOperations.h  CBlockOperations.h.unc-backup.md5~  CBlockOperations.h.unc-backup~  CDataRect.h  CDataRect.h.unc-backup.md5~  CDataRect.h.unc-backup~  CFileIO.h  CFileIO.h.unc-backup.md5~  CFileIO.h.unc-backup~  CFrameBuffer.h  CFrameBuffer.h.unc-backup.md5~  CFrameBuffer.h.unc-backup~  CGL_Basic.h  CGL_Basic.h.unc-backup.md5~  CGL_Basic.h.unc-backup~  CGL_Context.h  CGL_Context.h.unc-backup.md5~  CGL_Context.h.unc-backup~  CGL_Freetype.h  CGL_Freetype.h.unc-backup.md5~  CGL_Freetype.h.unc-backup~  CGL_Shader.h  CGL_Shader.h.unc-backup.md5~  CGL_Shader.h.unc-backup~  CGL_Shader_Blurline.h  CGL_Shader_Blurline.h.unc-backup.md5~  CGL_Shader_Blurline.h.unc-backup~  CGL_Shader_Color.h  CGL_Shader_Color.h.unc-backup.md5~  CGL_Shader_Color.h.unc-backup~  CGL_Shader_Noise.h  CGL_Shader_Noise.h.unc-backup.md5~  CGL_Shader_Noise.h.unc-backup~  CGL_Shader_Seed.h  CGL_Shader_Seed.h.unc-backup.md5~  CGL_Shader_Seed.h.unc-backup~  CGL_Shader_Sphere.h  CGL_Shader_Sphere.h.unc-backup.md5~  CGL_Shader_Sphere.h.unc-backup~  CGL_Shader_Texture.h  (+83 more)
project/include/GLline/: CLineData.h  CLineData.h.unc-backup.md5~  CLineData.h.unc-backup~  CLineStrip.h  CLineStrip.h.unc-backup.md5~  CLineStrip.h.unc-backup~  CPointData.h  CPointData.h.unc-backup.md5~  CPointData.h.unc-backup~  CPointObject.h  CPointObject.h.unc-backup.md5~  CPointObject.h.unc-backup~  CRingData.h  CRingData.h.unc-backup.md5~  CRingData.h.unc-backup~
project/lib/: CBlockOperations.cpp  CDataRect.cpp  CFileIO.cpp  CFrameBuffer.cpp  CGL_Basic.cpp  CGL_Context.cpp  CGL_Freetype.cpp  CGL_Shader.cpp  CGL_Shader_Blurline.cpp  CGL_Shader_Color.cpp  CGL_Shader_Noise.cpp  CGL_Shader_Sphere.cpp  CGL_Shader_Texture.cpp  CGL_Texture.cpp  CGraflib.cpp  CGraflibPng.cpp  CPixel24.cpp  CPixel32.cpp  CSdlApp.cpp  NGlobalLog-Desktop.cpp  NUtf.cpp  PnglibInterface.c
project/lib/shader/: shader_sphere_frag.cpp  shader_sphere_frag.shader  shader_sphere_vert.cpp  shader_sphere_vert.shader
project/shaders/frag/: 00-template.glsl  00.glsl  01.glsl  02.glsl  03.glsl  04.glsl  05.glsl  06.glsl  07.glsl  08.glsl  09.glsl  10.glsl  11.glsl  12.glsl  13.glsl  14.glsl  15.glsl  16.glsl  17.glsl  18.glsl  19.glsl  20.glsl  21.glsl  22.glsl  23.glsl  24.glsl  25.glsl  26.glsl  27.glsl  28.glsl  29.glsl  30.glsl  31.glsl  32.glsl  33.glsl  34.glsl  35-neu.glsl  35.glsl  36.glsl  37.glsl  (+49 more)
project/shaders/vert/: 00.glsl  01.glsl
project/source/: CContextLissa.cpp  CContextLissa.h  CContextSphere.cpp  CContextSphere.h  CPlayObject.cpp  CPlayObject.h  CPlayerObject.h  CSDLblurline.cpp  CSDLblurline.h  mainSdl.cpp
project/source/include/: CBlockOperations.h  CFileIO.h  CFrameBuffer.h  CGL_Basic.h  CGL_Shader.h  CGL_Shader_Color.h  CGL_Shader_Noise.h  CGL_Shader_Sphere.h  CGraflib.h  CHexConv.h  CPixel32.h  CPixel8.h  CPolygon.h  CRandom.h  CRectT.h  CRectT.hpp  CSdlApp.h  CSetPointer.h  CUtf.h  CVector2T.hpp  EFileTypes.h  EUniformLocation.h  GLinclude.h  NGlobalLog.h  NStringTool.h  NUtf.h  SVertArray.h  Utf8Table.h  template_macros.hpp
project/source/include/GLline/: CLineData.h  CLineStrip.h  CPointObject.h  CRingData.h  StaticLineHelp.hpp
project/source/lib/: CDataRect.cpp  CFileIO.cpp  CFrameBuffer.cpp  CGL_Basic.cpp  CGL_Context.cpp  CGL_Shader.cpp  CGL_Shader_Color.cpp  CGL_Shader_Noise.cpp  CGL_Shader_Sphere.cpp  CSdlApp.cpp  NGlobalLog-Desktop.cpp  NStringTool.cpp
project/source/lib/shader/: shader_sphere_vert.cpp
project/syntax-highlight/textpad/: glslang.syn
project/uncrustify/: run-file.sh  run.sh  uncrustify-bsd-ksti.cfg
